bodhi-aws-main/deployment/distribution/ray/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  # labels:
  #   control-plane: superset
  #   istio-injection: enabled
  name: ray
  annotations:
    # annotation key is configurable
    iam.amazonaws.com/permitted: "arn:aws:iam::412674115502:role/.*"
